--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -54,41 +54,188 @@
                 }
             }
         }
-        .search-container{
-            .searchInput{
-                width: 275px;
-                height: 35px;
-                display: flex;
-                border: 1px solid #e5e5e5;
-                background-color: rgb(0, 0, 0);
+        .icons{
+            display: flex;
+            align-items: center;
+            .search-container{
+                .searchInput{
+                    width: 275px;
+                    height: 35px;
+                    display: flex;
+                    border: 1px solid #e5e5e5;
+                    background-color: rgb(0, 0, 0);
+                }
+                #searchInput{
+                    button{
+                        border: none;
+                        background-color: transparent;
+                        height: 100%;
+                        padding: 5px 14px 5px 5px;
+                        cursor: pointer;
+                    }
+                    input{
+                        background-color: transparent;
+                        color: #e5e5e5;
+                        font-size: .9rem;
+                        border: none;
+                        height: 100%;
+                        width: 0;
+                        &:focus-visible{
+                            outline: none;
+                        }
+                        &::placeholder{
+                            color: #8c8c8c;
+                            font-size: .9rem;
+                        }
+                    }
+                }
             }
-            #searchInput{
-                button{
-                    border: none;
-                    background-color: transparent;
-                    height: 100%;
-                    padding: 5px 10px 5px 5px;
+            .notif{
+                margin-right: 15px;
+                margin-top: 0.2em;
+                padding: 2px 6px 3px;
+                svg{
                     cursor: pointer;
                 }
-                input{
-                    background-color: transparent;
-                    color: #e5e5e5;
-                    font-size: .9rem;
-                    border: none;
-                    height: 100%;
-                    width: 0;
-                    &:focus-visible{
-                        outline: none;
+            }
+            .account{
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+                &:hover > .profile .arrowClose{
+                    transition: transform .4s ease;
+                    transform: rotate(180deg);
+                }
+                &:hover > .profile .profileSelect .arrowOpen{
+                    opacity: 1;
+                }
+                .profile{
+                    display: flex;
+                    align-items: center;
+                    .profileSelect{
+                        position: relative;
+                        height: 32px;
+                        width: 32px;
+                        img{
+                            height: 32px;
+                            width: 32px;
+                            border-radius: 4px;
+                        }
+                        .arrowOpen{
+                            position: absolute;
+                            left: 50%;
+                            bottom: -19px;
+                            width: 0;
+                            height: 0;
+                            margin-left: -8px;
+                            border: 8px solid transparent;
+                            border-bottom-color: #e5e5e5;
+                            opacity: 0;
+                            transition-duration: 150ms;
+                            transition-property: opacity;
+                            cursor: default;
+                        }
                     }
-                    &::placeholder{
-                        color: #8c8c8c;
-                        font-size: .9rem;
+                    .arrowClose{
+                        border-color: #fff transparent;
+                        border-style: solid;
+                        border-width: 5px 5px 0;
+                        width: 0;
+                        height: 0;
+                        margin-left: 10px;
+                        transition: transform .4s ease;
+                    }
+                }
+                
+                .accountMenu{
+                    font-family: 'Roboto', sans-serif;
+                    cursor: default;
+                    position: fixed;
+                    top: 70px;
+                    right: 0;
+                    width: 220px;
+                    margin-right: 4%;
+                    background-color: rgba(0, 0, 0, 0.9);
+                    border: 1px rgba(255, 255, 255, 0.15) solid;
+                    opacity: 0;
+                    transition-duration: 150ms;
+                    transition-property: opacity;
+                    .profiles{
+                        .profilesList{
+                            padding: 10px 0 5px;
+                            li{
+                                display: flex;
+                                align-items: center;
+                                list-style: none;
+                                padding: 5px 10px;
+                                img{
+                                    margin-right: 10px;
+                                    width: 32px;
+                                    height: 32px;
+                                    border-radius: 4px;
+                                    cursor: pointer;
+                                    &:hover + p{
+                                        text-decoration: underline;
+                                    }
+                                }
+                                p{
+                                    color: rgb(255, 255, 255);
+                                    font-size: 13px;
+                                    width: 100px;
+                                    cursor: pointer;
+                                    &:hover{
+                                        text-decoration: underline;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .settings{
+                        ul{
+                            padding-bottom: 10px;
+                            li{
+                                padding: 5px 10px;
+                                display: flex;
+                                align-items: center;
+                                list-style: none;
+                                svg{
+                                    color: #b3b3b3;
+                                    box-sizing: initial;
+                                    padding: 0 13px 0 5px;
+                                    cursor: pointer;
+                                }
+                                p{
+                                    color: rgb(255, 255, 255);
+                                    font-size: 13px;
+                                    cursor: pointer;
+                                    &:hover{
+                                        text-decoration: underline;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .exitAccount{
+                        padding: 10px 0;
+                        border-top: 1px rgba(255, 255, 255, .25) solid;
+                        display: flex;
+                        justify-content: center;
+                        a{
+                            padding: 5px 10px;
+                            color: rgb(255, 255, 255);
+                            font-size: 13px;
+                            line-height: 16px;
+                            text-decoration: none;
+                            &:hover{
+                                text-decoration: underline;
+                            }
+                        }
                     }
                 }
             }
         }
     }
-    
+
     .search-div{
         padding: 8% 4% 0;
         position: absolute;
@@ -173,6 +320,7 @@
                     transition-property: transform, opacity;
                     transform-origin: left bottom;
                     transition-duration: 1300ms;
+                    user-select: none;
                 }
             }
             .reproducir{
@@ -310,10 +458,9 @@
                     opacity: 1;
                 }
                 &:hover > svg{
-                    transform: scale(.9) translateX(0);
+                    transform: scale(.8) translateX(0);
                 }
                 h1{
-                    
                     color: #e5e5e5;
                     font-size: 1.4vw;
                     margin-right: 1vw;
@@ -327,16 +474,16 @@
                     transform: translateX(-100%);
                     opacity: 0;
                     transition-property: transform, opacity;
-                    transition-duration: 1s;
+                    transition-duration: .5s;
                 }
                 svg{
-                    width: 18px;
-                    height: 18px;
+                    width: 14px;
+                    height: 14px;
                     fill: #54b9c5;
                     opacity: 0;
                     transform: scale(1) translateX(-7.5vw);
                     transition-property: transform;
-                    transition-duration: 1s;
+                    transition-duration: .5s;
                 }
             }
             
@@ -487,6 +634,7 @@
                     };
                     .backdrop{
                         width: 100%;
+                        height: 510px;
                         position: relative;
                         z-index: 2;
                         opacity: 1;
