--- a/css/main.css
+++ b/css/main.css
@@ -1050,7 +1050,7 @@
           margin-top: 1.5em; }
           .home-body .bgInfo .movieInfo .info .metadataL .sipnosis p {
             color: #fff;
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 400;
             line-height: 24px; }
         .home-body .bgInfo .movieInfo .info .metadataR .genres {
@@ -1068,6 +1068,134 @@
           line-height: 20px;
           padding: 0.5em .5em 0.5em 0; }
           .home-body .bgInfo .movieInfo .info .metadataR .created span {
+            color: #777;
+            font-size: 14px;
+            line-height: 20px; }
+        .home-body .bgInfo .movieInfo .info .similar {
+          grid-column: 1 / 3; }
+          .home-body .bgInfo .movieInfo .info .similar h3 {
+            color: white;
+            font-size: 24px;
+            font-family: 'Roboto', sans-serif;
+            margin-bottom: 20px;
+            margin-top: 48px; }
+          .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles {
+            display: grid;
+            justify-items: stretch;
+            align-items: stretch;
+            grid-gap: 1em;
+            grid-template-columns: repeat(3, 1fr); }
+            .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard {
+              background-color: #2f2f2f;
+              border-radius: 4px;
+              overflow: hidden;
+              cursor: pointer; }
+              .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard:hover > .poster .play {
+                opacity: 1; }
+              .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .poster {
+                position: relative;
+                height: 145px; }
+                .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .poster .titleImg {
+                  width: 100%;
+                  height: 100%; }
+                .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .poster .titleLogo {
+                  width: 55%;
+                  max-height: 70px;
+                  position: absolute;
+                  bottom: 0;
+                  left: 0; }
+                  .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .poster .titleLogo img {
+                    max-width: 100%;
+                    max-height: 70px;
+                    object-fit: contain;
+                    filter: drop-shadow(0px 0px 3px black);
+                    padding: 0 0 10px 10px; }
+                .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .poster .play {
+                  width: 3em;
+                  height: 3em;
+                  position: absolute;
+                  top: 50%;
+                  left: 50%;
+                  transform: translate(-50%, -50%);
+                  background-color: rgba(30, 30, 20, 0.5);
+                  color: white;
+                  border: 1px solid #fff;
+                  border-radius: 2em;
+                  padding: 0.5em;
+                  opacity: 0;
+                  transition: opacity .3s ease; }
+              .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .titleMeta {
+                padding: 1em;
+                display: flex;
+                justify-content: space-between;
+                align-items: center; }
+                .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .titleMeta .metaL {
+                  max-width: 60%; }
+                  .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .titleMeta .metaL .forYou {
+                    display: inline-block;
+                    color: #46d369;
+                    font-family: 'Roboto';
+                    font-weight: 600;
+                    font-size: 16px;
+                    margin-right: 0.5em;
+                    margin-bottom: 0.4em; }
+                  .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .titleMeta .metaL .age {
+                    color: #fff;
+                    font-family: 'Roboto';
+                    font-weight: 400;
+                    font-size: 16px;
+                    border: 1px solid rgba(255, 255, 255, 0.4);
+                    padding: 0.05em 0.45em;
+                    margin-right: 0.2em; }
+                  .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .titleMeta .metaL .year {
+                    color: #fff;
+                    font-family: 'Roboto';
+                    font-weight: 500; }
+                .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .titleMeta .metaR {
+                  position: relative;
+                  width: 40px;
+                  height: 40px;
+                  border-radius: 50%;
+                  background-color: rgba(42, 42, 42, 0.6);
+                  border: 2px solid rgba(255, 255, 255, 0.5);
+                  color: #fff; }
+                  .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .titleMeta .metaR:hover {
+                    border: 2px solid white;
+                    cursor: pointer; }
+                  .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .titleMeta .metaR svg {
+                    width: 20px;
+                    height: 20px;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%); }
+              .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .overview {
+                margin: 0 1em 1em;
+                height: 125px;
+                overflow-y: scroll; }
+                .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .overview::-webkit-scrollbar {
+                  display: none; }
+                .home-body .bgInfo .movieInfo .info .similar .titlesContainer .similarTitles .titleCard .overview p {
+                  color: #d2d2d2;
+                  font-size: 14px;
+                  line-height: 20px; }
+        .home-body .bgInfo .movieInfo .info .acercaDe h3 {
+          color: #fff;
+          font-family: 'Roboto', sans-serif;
+          font-size: 24px;
+          font-weight: 400;
+          margin-bottom: 20px;
+          margin-top: 48px; }
+          .home-body .bgInfo .movieInfo .info .acercaDe h3 span {
+            font-weight: 600; }
+        .home-body .bgInfo .movieInfo .info .acercaDe .created {
+          color: #fff;
+          font-family: 'Roboto';
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 20px;
+          margin: 0.5em .5em 0.5em 0; }
+          .home-body .bgInfo .movieInfo .info .acercaDe .created span {
             color: #777;
             font-size: 14px;
             line-height: 20px; }
