--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -845,7 +845,7 @@
                         margin-top: 1.5em;
                         p{
                             color: #fff;
-                            font-size: 14px;
+                            font-size: 16px;
                             font-weight: 400;
                             line-height: 24px;
                         }
@@ -868,6 +868,163 @@
                         font-size: 14px;
                         line-height: 20px;
                         padding: 0.5em .5em 0.5em 0;
+                        span{
+                            color: #777;
+                            font-size: 14px;
+                            line-height: 20px;
+                        }
+                    }
+                }
+                .similar{
+                    grid-column: 1 / 3;
+                    h3{
+                        color: rgb(255, 255, 255);
+                        font-size: 24px;
+                        font-family: 'Roboto', sans-serif;
+                        margin-bottom: 20px;
+                        margin-top: 48px;
+                    }
+                    .titlesContainer{
+                        .similarTitles{
+                            display: grid;
+                            justify-items: stretch;
+                            align-items: stretch;
+                            grid-gap: 1em;
+                            grid-template-columns: repeat(3, 1fr);
+                            .titleCard{
+                                background-color: #2f2f2f;
+                                border-radius: 4px;
+                                overflow: hidden;
+                                cursor: pointer;
+                                &:hover > .poster .play{
+                                    opacity: 1;
+                                }
+                                .poster{
+                                    position: relative;
+                                    height: 145px;
+                                    .titleImg{
+                                        width: 100%;
+                                        height: 100%;
+                                    }
+                                    .titleLogo{
+                                        width: 55%;
+                                        max-height: 70px;
+                                        position: absolute;
+                                        bottom: 0;
+                                        left: 0;
+                                        img{
+                                            max-width: 100%;
+                                            max-height: 70px;
+                                            object-fit: contain;
+                                            filter: drop-shadow(0px 0px 3px rgb(0, 0, 0));
+                                            padding: 0 0 10px 10px;
+                                        }
+                                    }
+                                    .play{
+                                        width: 3em;
+                                        height: 3em;
+                                        position: absolute;
+                                        top: 50%;
+                                        left: 50%;
+                                        transform: translate(-50%, -50%);
+                                        background-color: rgba(30,30,20,.5);
+                                        color: rgb(255, 255, 255);
+                                        border: 1px solid #fff;
+                                        border-radius: 2em;
+                                        padding: 0.5em;
+                                        opacity: 0;
+                                        transition: opacity .3s ease;
+                                    }
+                                }
+                                .titleMeta{
+                                    padding: 1em;
+                                    display: flex;
+                                    justify-content: space-between;
+                                    align-items: center;
+                                    .metaL{
+                                        max-width: 60%;
+                                        .forYou{
+                                            display: inline-block;
+                                            color: #46d369;
+                                            font-family: 'Roboto';
+                                            font-weight: 600;
+                                            font-size: 16px;
+                                            margin-right: 0.5em;
+                                            margin-bottom: 0.4em;
+                                        }
+                                        .age{
+                                            color: #fff;
+                                            font-family: 'Roboto';
+                                            font-weight: 400;
+                                            font-size: 16px;
+                                            border: 1px solid rgba(255, 255, 255, 0.4);
+                                            padding: 0.05em 0.45em;
+                                            margin-right: 0.2em;
+                                        }
+                                        .year{
+                                            color: #fff;
+                                            font-family: 'Roboto';
+                                            font-weight: 500;
+                                        }
+                                    }
+                                    .metaR{
+                                        position: relative;
+                                        width: 40px;
+                                        height: 40px;
+                                        border-radius: 50%;
+                                        background-color: rgba(42,42,42,.6);
+                                        border: 2px solid rgba(255, 255, 255, 0.5);
+                                        color: #fff;
+                                        &:hover{
+                                            border: 2px solid rgb(255, 255, 255);
+                                            cursor: pointer;
+                                        }
+                                        svg{
+                                            width: 20px;
+                                            height: 20px;
+                                            position: absolute;
+                                            top: 50%;
+                                            left: 50%;
+                                            transform: translate(-50%, -50%);
+                                        }
+                                    }
+                                }
+                                .overview{
+                                    margin: 0 1em 1em;
+                                    height: 125px;
+                                    overflow-y: scroll;
+                                    &::-webkit-scrollbar{
+                                        display: none;
+                                    }
+                                    p{
+                                        color: #d2d2d2;
+                                        font-size: 14px;
+                                        line-height: 20px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+                .acercaDe{
+                    h3{
+                        color: #fff;
+                        font-family: 'Roboto', sans-serif;
+                        font-size: 24px;
+                        font-weight: 400;
+                        margin-bottom: 20px;
+                        margin-top: 48px;
+                        span{
+                            font-weight: 600;
+                        }
+                    }
+                    .created{
+                        color: #fff;
+                        font-family: 'Roboto';
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 20px;
+                        margin: 0.5em .5em 0.5em 0;
                         span{
                             color: #777;
                             font-size: 14px;
