--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
-    <title>Home - Nesquik</title>
+    <title id="titlePage">Home - Nesquik</title>
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css'>
