--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -605,10 +605,13 @@
         background: rgba(0, 0, 0, 0.7);
         width: 100%;
         height: 100%;
+        opacity: 0;
+        transition-property: opacity;
+        transition-duration: 300ms;
         display: flex;
         justify-content: center;
-        overflow-y: auto;
         align-items: baseline;
+        overflow-y: auto;
         &::-webkit-scrollbar{
             display: none;
         }
@@ -622,6 +625,10 @@
             border-radius: 6px;
             overflow: hidden;
             box-shadow: 0px 3px 10px rgba(0, 0, 0, .75);
+            opacity: 0;
+            transform: scale(0.90);
+            transition-property: opacity, transform;
+            transition-duration: 300ms;
             .imgInfo{
                 position: relative;
                 width: 100%;
@@ -638,7 +645,8 @@
                         position: relative;
                         z-index: 2;
                         opacity: 1;
-                        transition: opacity 0.5s ease-in-out;
+                        transition-property: opacity;
+                        transition-duration: 500ms;
                     }
                 }
                 
@@ -1034,5 +1042,11 @@
                 }
             }
         }
+    }
+}
+
+@media screen and (max-width: 1280px){
+    .nav-links a{
+        font-size: 1vw !important;
     }
 }
