--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -679,7 +679,7 @@
                         padding: 9px 19px;
                         border: none;
                         border-radius: 5px;
-                        margin: 0.25em;
+                        margin: 0.25em 0;
                         &:hover{
                             background-color: #e6e6e6!important;
                             cursor: pointer;
@@ -698,7 +698,7 @@
                         width: 40px;
                         height: 40px;
                         border-radius: 50%;
-                        margin: 0.25em;
+                        margin: .25em .4em .25em .8em;
                         background-color: rgba(42, 42, 42, .6);
                         border: 2px solid rgba(255, 255, 255, 0.5);
                         &:hover{
@@ -716,6 +716,7 @@
                             transform: translate(-50%, -50%);
                             &:hover ~ .listText{
                                 opacity: 1;
+                                visibility: visible;
                             }
                         }
                         .listText{
@@ -731,6 +732,7 @@
                             justify-content: center;
                             align-items: center;
                             opacity: 0;
+                            visibility: hidden;
                             ::after{
                                 content: "";
                                 width: 0;
@@ -752,7 +754,7 @@
                     .rate{
                         position: relative;
                         border-radius: 50%;
-                        margin: 0.25em;
+                        margin: .25em .4em;
                         width: 40px;
                         height: 40px;
                         background-color: rgba(42, 42, 42, .6);
@@ -761,13 +763,95 @@
                             border: 2px solid rgb(255, 255, 255);
                             cursor: pointer;
                         }
-                        svg{
-                            width: 20px;
-                            height: 20px;
+                        .yourRate{
+                            width: 100%;
+                            height: 100%;
+                            &:hover + .scores{
+                                opacity: 1;
+                                visibility: visible;
+                            }
+                            img{
+                                width: 20px;
+                                height: 20px;
+                                position: absolute;
+                                top: 50%;
+                                left: 50%;
+                                transform: translate(-50%, -50%);
+                            }
+                        }
+                        .scores{
+                            display: flex;
+                            align-items: center;
                             position: absolute;
                             top: 50%;
                             left: 50%;
                             transform: translate(-50%, -50%);
+                            background-color: rgb(35, 35, 35);
+                            border-radius: 30px;
+                            padding: 9.5px;
+                            cursor: default;
+                            opacity: 0;
+                            visibility: hidden;
+                            transition-property: opacity, visibility;
+                            transition-duration: 300ms;
+                            &:hover{
+                                opacity: 1;
+                                visibility: visible;
+                            }
+                            .score{
+                                position: relative;
+                                width: 40px;
+                                height: 40px;
+                                margin: 0 .25em;
+                                border-radius: 50%;
+                                background-color: transparent;
+                                cursor: pointer;
+                                &:hover{
+                                    background-color: rgba(128, 128, 128, 0.2);
+                                }
+                                &:hover > .listText{
+                                    opacity: 1;
+                                    visibility: visible;
+                                }
+                                img{
+                                    box-sizing: initial;
+                                    width: 25px;
+                                    height: 25px;
+                                    padding: 7.5px;
+                                }
+                                .listText{
+                                    position: absolute;
+                                    top: 0;
+                                    left: 50%;
+                                    width: 145px;
+                                    height: 35px;
+                                    margin: 0;
+                                    border-radius: 3px;
+                                    background-color: #e6e6e6;
+                                    transform: translate(-50%, -150%);
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    opacity: 0;
+                                    visibility: hidden;
+                                    ::after{
+                                        content: "";
+                                        width: 0;
+                                        height: 0;
+                                        position: absolute;
+                                        bottom: 0;
+                                        left: 50%;
+                                        transform: translate(-50%, 100%);
+                                        border-top: 10px solid rgb(230, 230, 230);
+                                        border-left: 10px solid transparent;
+                                        border-right: 10px solid transparent;
+                                    }
+                                    span{
+                                        color: rgb(24, 24, 24);
+                                        font-size: 18px;
+                                    }
+                                }
+                            }
                         }
                     }
                 }
